# rnetlib

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  bandwidth_client.cc  bandwidth_server.cc  bi_bandwidth_client.cc  bi_bandwidth_server.cc  echo_client.cc  echo_server.cc  rma_echo_client.cc  rma_echo_server.cc  sg_bandwidth_client.cc  sg_bandwidth_server.cc  sg_echo_client.cc  sg_echo_server.cc
include/rnetlib/: channel.h  client.h  eager_buffer.h  event_handler.h  event_loop.h  local_memory_region.h  registered_memory.h  remote_memory_region.h  rnetlib.h  server.h
include/rnetlib/ofi/: ofi_channel.h  ofi_client.h  ofi_endpoint.h  ofi_local_memory_region.h  ofi_server.h
include/rnetlib/rdma/: rdma_channel.h  rdma_client.h  rdma_common.h  rdma_event_loop.h  rdma_local_memory_region.h  rdma_server.h
include/rnetlib/socket/: socket_channel.h  socket_client.h  socket_common.h  socket_event_loop.h  socket_local_memory_region.h  socket_registered_memory.h  socket_server.h
include/rnetlib/verbs/: verbs_channel.h  verbs_client.h  verbs_common.h  verbs_event_loop.h  verbs_local_memory_region.h  verbs_server.h
