project(echo_server)
project(echo_client)
project(bandwidth_server)
project(bandwidth_client)
project(sg_echo_server)
project(sg_echo_client)

add_executable(echo_server echo_server.cc)
add_executable(echo_client echo_client.cc)
add_executable(bandwidth_server bandwidth_server.cc)
add_executable(bandwidth_client bandwidth_client.cc)
add_executable(sg_echo_server sg_echo_server.cc)
add_executable(sg_echo_client sg_echo_client.cc)

if (USE_RDMA)
    add_definitions(-DUSE_RDMA)
    target_link_libraries(echo_server rdmacm ibverbs)
    target_link_libraries(echo_client rdmacm ibverbs)
    target_link_libraries(bandwidth_server rdmacm ibverbs)
    target_link_libraries(bandwidth_client rdmacm ibverbs)
    target_link_libraries(sg_echo_server rdmacm ibverbs)
    target_link_libraries(sg_echo_client rdmacm ibverbs)
endif (USE_RDMA)